# CSCI251Assign2

./: Alien.cpp  Alien.h  CMakeLists.txt  CombatManager.cpp  CombatManager.h  Crew.cpp  Crew.h  Enemy.cpp  Enemy.h  Engine.h  Hardpoint.h  Hull.cpp  Hull.h  Officer.cpp  Officer.h  PlanetSector.cpp  PlanetSector.h  Sector.cpp  Sector.h  Ship.cpp  Ship.h  ShipBuilder.cpp  ShipBuilder.h  ShipSector.cpp  ShipSector.h  SkillSet.h  main.cpp
